--- a/public/css/app.css
+++ b/public/css/app.css
@@ -548,6 +548,10 @@ video {
   margin-left: 3rem;
 }.-mt-px {
   margin-top: -1px;
+}.mb-8 {
+  margin-bottom: 2rem;
+}.mb-2 {
+  margin-bottom: 0.5rem;
 }.block {
   display: block;
 }.flex {
@@ -596,8 +600,12 @@ video {
   max-width: 72rem;
 }.max-w-xl {
   max-width: 36rem;
+}.max-w-screen-sm {
+  max-width: 640px;
 }.flex-1 {
   flex: 1 1 0%;
+}.flex-auto {
+  flex: 1 1 auto;
 }.shrink-0 {
   flex-shrink: 0;
 }.origin-top-left {
@@ -626,6 +634,8 @@ video {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }.flex-col {
   flex-direction: column;
+}.flex-wrap {
+  flex-wrap: wrap;
 }.items-center {
   align-items: center;
 }.justify-end {
@@ -699,12 +709,20 @@ video {
 }.bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }.fill-current {
   fill: currentColor;
 }.p-2 {
   padding: 0.5rem;
 }.p-6 {
   padding: 1.5rem;
+}.p-4 {
+  padding: 1rem;
 }.px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -750,6 +768,10 @@ video {
   padding-top: 1.5rem;
 }.pt-8 {
   padding-top: 2rem;
+}.pl-1 {
+  padding-left: 0.25rem;
+}.text-left {
+  text-align: left;
 }.text-center {
   text-align: center;
 }.font-sans {
@@ -769,10 +791,15 @@ video {
 }.text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }.font-medium {
   font-weight: 500;
 }.font-semibold {
   font-weight: 600;
+}.font-bold {
+  font-weight: 700;
 }.uppercase {
   text-transform: uppercase;
 }.leading-5 {
@@ -781,6 +808,8 @@ video {
   line-height: 1.25;
 }.leading-7 {
   line-height: 1.75rem;
+}.leading-none {
+  line-height: 1;
 }.tracking-widest {
   letter-spacing: 0.1em;
 }.tracking-wider {
@@ -824,6 +853,9 @@ video {
 }.text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
+}.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
 }.underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -892,6 +924,9 @@ video {
 }.hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}.hover\:bg-blue-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }.hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -924,6 +959,9 @@ video {
 }.focus\:border-gray-900:focus {
   --tw-border-opacity: 1;
   border-color: rgb(17 24 39 / var(--tw-border-opacity));
+}.focus\:border-blue-400:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(96 165 250 / var(--tw-border-opacity));
 }.focus\:bg-gray-100:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -952,11 +990,23 @@ video {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}.focus\:ring-2:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }.focus\:ring-indigo-200:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(199 210 254 / var(--tw-ring-opacity));
+}.focus\:ring-blue-400:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(96 165 250 / var(--tw-ring-opacity));
+}.focus\:ring-blue-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
 }.focus\:ring-opacity-50:focus {
   --tw-ring-opacity: 0.5;
+}.focus\:ring-offset-2:focus {
+  --tw-ring-offset-width: 2px;
 }.active\:bg-gray-100:active {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1030,6 +1080,9 @@ video {
     text-align: left;
   }.sm\:text-right {
     text-align: right;
+  }.sm\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }@media (min-width: 768px) {.md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1038,7 +1091,11 @@ video {
   }.md\:border-l {
     border-left-width: 1px;
   }
-}@media (min-width: 1024px) {.lg\:px-8 {
+}@media (min-width: 1024px) {.lg\:inline-flex {
+    display: inline-flex;
+  }.lg\:rounded-full {
+    border-radius: 9999px;
+  }.lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
   }
