--- a/public/css/app.css
+++ b/public/css/app.css
@@ -538,6 +538,12 @@ video {
   margin-top: 0.5rem;
 }.ml-2 {
   margin-left: 0.5rem;
+}.mt-5 {
+  margin-top: 1.25rem;
+}.mb-5 {
+  margin-bottom: 1.25rem;
+}.mb-2 {
+  margin-bottom: 0.5rem;
 }.mt-6 {
   margin-top: 1.5rem;
 }.mr-2 {
@@ -550,10 +556,10 @@ video {
   margin-top: -1px;
 }.mb-8 {
   margin-bottom: 2rem;
-}.mb-2 {
-  margin-bottom: 0.5rem;
 }.block {
   display: block;
+}.inline-block {
+  display: inline-block;
 }.flex {
   display: flex;
 }.inline-flex {
@@ -638,6 +644,8 @@ video {
   flex-direction: column;
 }.flex-wrap {
   flex-wrap: wrap;
+}.items-start {
+  align-items: flex-start;
 }.items-center {
   align-items: center;
 }.justify-end {
@@ -664,6 +672,8 @@ video {
   border-radius: 0.375rem;
 }.rounded {
   border-radius: 0.25rem;
+}.rounded-full {
+  border-radius: 9999px;
 }.rounded-lg {
   border-radius: 0.5rem;
 }.rounded-l-md {
@@ -719,6 +729,9 @@ video {
 }.bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }.fill-current {
   fill: currentColor;
 }.p-2 {
@@ -916,6 +929,8 @@ video {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }.ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}.last\:border-b-0:last-child {
+  border-bottom-width: 0px;
 }.hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
