--- a/public/css/app.css
+++ b/public/css/app.css
@@ -520,12 +520,18 @@ video {
   margin-left: 0.75rem;
 }.-ml-px {
   margin-left: -1px;
+}.mt-5 {
+  margin-top: 1.25rem;
+}.mb-5 {
+  margin-bottom: 1.25rem;
 }.mt-3 {
   margin-top: 0.75rem;
 }.ml-1 {
   margin-left: 0.25rem;
 }.-mr-2 {
   margin-right: -0.5rem;
+}.mt-2 {
+  margin-top: 0.5rem;
 }.mb-4 {
   margin-bottom: 1rem;
 }.mt-1 {
@@ -534,14 +540,8 @@ video {
   margin-top: 1rem;
 }.ml-4 {
   margin-left: 1rem;
-}.mt-2 {
-  margin-top: 0.5rem;
 }.ml-2 {
   margin-left: 0.5rem;
-}.mt-5 {
-  margin-top: 1.25rem;
-}.mb-5 {
-  margin-bottom: 1.25rem;
 }.mb-2 {
   margin-bottom: 0.5rem;
 }.mt-6 {
@@ -586,14 +586,14 @@ video {
   min-height: 100vh;
 }.w-5 {
   width: 1.25rem;
+}.w-full {
+  width: 100%;
 }.w-auto {
   width: auto;
 }.w-4 {
   width: 1rem;
 }.w-6 {
   width: 1.5rem;
-}.w-full {
-  width: 100%;
 }.w-20 {
   width: 5rem;
 }.w-48 {
@@ -602,10 +602,10 @@ video {
   width: 2rem;
 }.w-1\/2 {
   width: 50%;
-}.max-w-7xl {
-  max-width: 80rem;
 }.max-w-screen-sm {
   max-width: 640px;
+}.max-w-7xl {
+  max-width: 80rem;
 }.max-w-6xl {
   max-width: 72rem;
 }.max-w-xl {
@@ -697,12 +697,12 @@ video {
 }.border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}.border-gray-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }.border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}.border-gray-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }.border-indigo-400 {
   --tw-border-opacity: 1;
   border-color: rgb(129 140 248 / var(--tw-border-opacity));
@@ -732,14 +732,26 @@ video {
 }.bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}.bg-emerald-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(167 243 208 / var(--tw-bg-opacity));
+}.bg-pink-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 231 243 / var(--tw-bg-opacity));
+}.bg-lime-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(217 249 157 / var(--tw-bg-opacity));
+}.bg-green-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
 }.fill-current {
   fill: currentColor;
+}.p-4 {
+  padding: 1rem;
 }.p-2 {
   padding: 0.5rem;
 }.p-6 {
   padding: 1.5rem;
-}.p-4 {
-  padding: 1rem;
 }.px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -873,9 +885,18 @@ video {
 }.text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
+}.text-green-400 {
+  --tw-text-opacity: 1;
+  color: rgb(74 222 128 / var(--tw-text-opacity));
 }.text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
+}.text-pink-300 {
+  --tw-text-opacity: 1;
+  color: rgb(249 168 212 / var(--tw-text-opacity));
+}.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
 }.underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -890,13 +911,13 @@ video {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }.shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }.shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
