--- a/public/css/app.css
+++ b/public/css/app.css
@@ -513,6 +513,10 @@ video {
   z-index: 0;
 }.z-50 {
   z-index: 50;
+}.col-span-6 {
+  grid-column: span 6 / span 6;
+}.m-4 {
+  margin: 1rem;
 }.mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -520,28 +524,28 @@ video {
   margin-left: 0.75rem;
 }.-ml-px {
   margin-left: -1px;
+}.mt-5 {
+  margin-top: 1.25rem;
+}.mb-5 {
+  margin-bottom: 1.25rem;
 }.mt-3 {
   margin-top: 0.75rem;
+}.mt-2 {
+  margin-top: 0.5rem;
+}.mt-1 {
+  margin-top: 0.25rem;
 }.ml-1 {
   margin-left: 0.25rem;
 }.-mr-2 {
   margin-right: -0.5rem;
 }.mb-4 {
   margin-bottom: 1rem;
-}.mt-1 {
-  margin-top: 0.25rem;
 }.mt-4 {
   margin-top: 1rem;
 }.ml-4 {
   margin-left: 1rem;
-}.mt-2 {
-  margin-top: 0.5rem;
 }.ml-2 {
   margin-left: 0.5rem;
-}.mt-5 {
-  margin-top: 1.25rem;
-}.mb-5 {
-  margin-bottom: 1.25rem;
 }.mb-2 {
   margin-bottom: 0.5rem;
 }.mt-6 {
@@ -570,12 +574,14 @@ video {
   display: none;
 }.h-5 {
   height: 1.25rem;
+}.h-12 {
+  height: 3rem;
+}.h-4 {
+  height: 1rem;
 }.h-16 {
   height: 4rem;
 }.h-10 {
   height: 2.5rem;
-}.h-4 {
-  height: 1rem;
 }.h-6 {
   height: 1.5rem;
 }.h-20 {
@@ -586,14 +592,16 @@ video {
   min-height: 100vh;
 }.w-5 {
   width: 1.25rem;
-}.w-auto {
-  width: auto;
-}.w-4 {
-  width: 1rem;
-}.w-6 {
-  width: 1.5rem;
 }.w-full {
   width: 100%;
+}.w-12 {
+  width: 3rem;
+}.w-4 {
+  width: 1rem;
+}.w-auto {
+  width: auto;
+}.w-6 {
+  width: 1.5rem;
 }.w-20 {
   width: 5rem;
 }.w-48 {
@@ -602,10 +610,10 @@ video {
   width: 2rem;
 }.w-1\/2 {
   width: 50%;
-}.max-w-7xl {
-  max-width: 80rem;
 }.max-w-screen-sm {
   max-width: 640px;
+}.max-w-7xl {
+  max-width: 80rem;
 }.max-w-6xl {
   max-width: 72rem;
 }.max-w-xl {
@@ -670,10 +678,10 @@ video {
   overflow: hidden;
 }.rounded-md {
   border-radius: 0.375rem;
-}.rounded {
-  border-radius: 0.25rem;
 }.rounded-full {
   border-radius: 9999px;
+}.rounded {
+  border-radius: 0.25rem;
 }.rounded-lg {
   border-radius: 0.5rem;
 }.rounded-l-md {
@@ -697,17 +705,23 @@ video {
 }.border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}.border-gray-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }.border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}.border-green-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(21 128 61 / var(--tw-border-opacity));
+}.border-transparent {
+  border-color: transparent;
+}.border-gray-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
+}.border-gray-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(17 24 39 / var(--tw-border-opacity));
 }.border-indigo-400 {
   --tw-border-opacity: 1;
   border-color: rgb(129 140 248 / var(--tw-border-opacity));
-}.border-transparent {
-  border-color: transparent;
 }.border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
@@ -717,6 +731,12 @@ video {
 }.bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}.bg-green-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 252 231 / var(--tw-bg-opacity));
+}.bg-indigo-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 70 229 / var(--tw-bg-opacity));
 }.bg-indigo-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(238 242 255 / var(--tw-bg-opacity));
@@ -734,12 +754,12 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }.fill-current {
   fill: currentColor;
+}.p-4 {
+  padding: 1rem;
 }.p-2 {
   padding: 0.5rem;
 }.p-6 {
   padding: 1.5rem;
-}.p-4 {
-  padding: 1rem;
 }.px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -749,6 +769,9 @@ video {
 }.px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }.py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -767,6 +790,10 @@ video {
 }.py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}.pt-1 {
+  padding-top: 0.25rem;
+}.pb-4 {
+  padding-bottom: 1rem;
 }.pt-2 {
   padding-top: 0.5rem;
 }.pb-3 {
@@ -775,12 +802,12 @@ video {
   padding-top: 1rem;
 }.pb-1 {
   padding-bottom: 0.25rem;
+}.pb-0 {
+  padding-bottom: 0px;
 }.pl-3 {
   padding-left: 0.75rem;
 }.pr-4 {
   padding-right: 1rem;
-}.pt-1 {
-  padding-top: 0.25rem;
 }.pt-6 {
   padding-top: 1.5rem;
 }.pt-8 {
@@ -791,20 +818,22 @@ video {
   text-align: left;
 }.text-center {
   text-align: center;
+}.text-right {
+  text-align: right;
 }.font-sans {
   font-family: Nunito, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }.text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }.text-base {
   font-size: 1rem;
   line-height: 1.5rem;
 }.text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }.text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
@@ -818,6 +847,8 @@ video {
   font-weight: 500;
 }.font-semibold {
   font-weight: 600;
+}.font-light {
+  font-weight: 300;
 }.font-bold {
   font-weight: 700;
 }.uppercase {
@@ -846,6 +877,12 @@ video {
 }.text-green-600 {
   --tw-text-opacity: 1;
   color: rgb(22 163 74 / var(--tw-text-opacity));
+}.text-indigo-600 {
+  --tw-text-opacity: 1;
+  color: rgb(79 70 229 / var(--tw-text-opacity));
+}.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }.text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
@@ -861,12 +898,6 @@ video {
 }.text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}.text-indigo-600 {
-  --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity));
 }.text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -890,13 +921,13 @@ video {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }.shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }.shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
@@ -937,6 +968,9 @@ video {
 }.hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}.hover\:bg-indigo-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(67 56 202 / var(--tw-bg-opacity));
 }.hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -958,20 +992,23 @@ video {
 }.hover\:text-gray-400:hover {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}.hover\:text-gray-800:hover {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }.hover\:text-gray-700:hover {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }.hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}.hover\:text-gray-800:hover {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
 }.focus\:z-10:focus {
   z-index: 10;
 }.focus\:border-blue-300:focus {
   --tw-border-opacity: 1;
   border-color: rgb(147 197 253 / var(--tw-border-opacity));
+}.focus\:border-indigo-500:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(99 102 241 / var(--tw-border-opacity));
 }.focus\:border-gray-300:focus {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -1019,6 +1056,9 @@ video {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}.focus\:ring-indigo-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
 }.focus\:ring-indigo-200:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(199 210 254 / var(--tw-ring-opacity));
@@ -1068,7 +1108,9 @@ video {
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity));
   }
-}@media (min-width: 640px) {.sm\:-my-px {
+}@media (min-width: 640px) {.sm\:col-span-4 {
+    grid-column: span 4 / span 4;
+  }.sm\:-my-px {
     margin-top: -1px;
     margin-bottom: -1px;
   }.sm\:ml-10 {
@@ -1099,6 +1141,8 @@ video {
     justify-content: space-between;
   }.sm\:rounded-lg {
     border-radius: 0.5rem;
+  }.sm\:p-6 {
+    padding: 1.5rem;
   }.sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
