--- a/public/css/app.css
+++ b/public/css/app.css
@@ -537,14 +537,14 @@ video {
   margin-left: 0.25rem;
 }.-mr-2 {
   margin-right: -0.5rem;
+}.mt-4 {
+  margin-top: 1rem;
 }.mt-1 {
   margin-top: 0.25rem;
 }.mt-2 {
   margin-top: 0.5rem;
 }.mb-4 {
   margin-bottom: 1rem;
-}.mt-4 {
-  margin-top: 1rem;
 }.ml-4 {
   margin-left: 1rem;
 }.ml-2 {
@@ -587,10 +587,10 @@ video {
   height: 1.5rem;
 }.h-12 {
   height: 3rem;
-}.h-20 {
-  height: 5rem;
 }.h-8 {
   height: 2rem;
+}.h-20 {
+  height: 5rem;
 }.min-h-screen {
   min-height: 100vh;
 }.w-5 {
@@ -607,12 +607,14 @@ video {
   width: 3rem;
 }.w-48 {
   width: 12rem;
-}.w-20 {
-  width: 5rem;
 }.w-8 {
   width: 2rem;
+}.w-1\/3 {
+  width: 33.333333%;
 }.w-1\/2 {
   width: 50%;
+}.w-20 {
+  width: 5rem;
 }.max-w-screen-sm {
   max-width: 640px;
 }.max-w-7xl {
@@ -747,9 +749,6 @@ video {
 }.bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}.bg-green-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
 }.bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
@@ -759,6 +758,9 @@ video {
 }.bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}.bg-green-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
 }.bg-pink-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(252 231 243 / var(--tw-bg-opacity));
