--- a/public/css/app.css
+++ b/public/css/app.css
@@ -537,14 +537,18 @@ video {
   margin-left: 0.25rem;
 }.-mr-2 {
   margin-right: -0.5rem;
-}.mt-4 {
-  margin-top: 1rem;
+}.mt-16 {
+  margin-top: 4rem;
+}.mb-8 {
+  margin-bottom: 2rem;
 }.mt-1 {
   margin-top: 0.25rem;
 }.mt-2 {
   margin-top: 0.5rem;
 }.mb-4 {
   margin-bottom: 1rem;
+}.mt-4 {
+  margin-top: 1rem;
 }.ml-4 {
   margin-left: 1rem;
 }.ml-2 {
@@ -561,8 +565,8 @@ video {
   margin-left: 3rem;
 }.-mt-px {
   margin-top: -1px;
-}.mb-8 {
-  margin-bottom: 2rem;
+}.mb-12 {
+  margin-bottom: 3rem;
 }.block {
   display: block;
 }.inline-block {
@@ -603,14 +607,14 @@ video {
   width: 1rem;
 }.w-6 {
   width: 1.5rem;
+}.w-1\/3 {
+  width: 33.333333%;
 }.w-12 {
   width: 3rem;
 }.w-48 {
   width: 12rem;
 }.w-8 {
   width: 2rem;
-}.w-1\/3 {
-  width: 33.333333%;
 }.w-1\/2 {
   width: 50%;
 }.w-20 {
@@ -697,8 +701,6 @@ video {
   border-bottom-right-radius: 0.375rem;
 }.border {
   border-width: 1px;
-}.border-2 {
-  border-width: 2px;
 }.border-b {
   border-bottom-width: 1px;
 }.border-t {
@@ -709,8 +711,6 @@ video {
   border-bottom-width: 2px;
 }.border-r {
   border-right-width: 1px;
-}.border-solid {
-  border-style: solid;
 }.border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -731,9 +731,6 @@ video {
 }.border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
-}.border-amber-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(217 119 6 / var(--tw-border-opacity));
 }.bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -767,9 +764,6 @@ video {
 }.bg-lime-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(217 249 157 / var(--tw-bg-opacity));
-}.bg-amber-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(217 119 6 / var(--tw-bg-opacity));
 }.fill-current {
   fill: currentColor;
 }.p-4 {
@@ -830,6 +824,8 @@ video {
   padding-top: 1.5rem;
 }.pt-8 {
   padding-top: 2rem;
+}.pr-8 {
+  padding-right: 2rem;
 }.pl-1 {
   padding-left: 0.25rem;
 }.text-left {
@@ -851,6 +847,9 @@ video {
 }.text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }.text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
